[package]
name = "veil"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Veil — 轻量化、高性能、低内存、高安全的企业级 HTTP API 网关"
license = "MIT OR Apache-2.0"

[[bin]]
name = "veil"
path = "src/main.rs"

[lib]
name = "veil"
path = "src/lib.rs"

[dependencies]
# 异步运行时
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
# HTTP 协议
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"
# TLS 支持（HTTPS 上游 + TLS 监听）
hyper-rustls = { version = "0.27", features = ["http2", "webpki-roots"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2"
# Web 框架与服务封装（axum 0.7 与 hyper 1.x 配套）
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util", "timeout", "limit", "load-shed", "retry"] }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "limit", "compression-full"] }
# 配置管理
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
toml = "0.8"
# 注：方案中提到的 config crate 经评估后改用自研轻量加载器（toml + 环境变量合并），
# 更贴合“轻量无依赖”目标且可控性更强，热更新/多环境叠加/校验/兜底均自行实现。
# 日志系统
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
# 监控指标
prometheus = "0.13"
# 并发限流
governor = "0.6"
# 错误处理
thiserror = "1"
anyhow = "1"
# 配置热更新
notify = "6"
# 无锁原子配置热替换
arc-swap = "1.7"
# 并发 HashMap（均衡器状态）
dashmap = "6"
# CIDR 网段匹配（XFF 信任代理）
ipnet = "2"
# 工具库
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
futures = "0.3"
rand = "0.8"
regex = "1"
parking_lot = "0.12"
subtle = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
